@@ -1,3 +1,12 @@
+2004-06-09  Mark Grondona <mgrondona@llnl.gov>
+
+	* src/pdsh/dsh.c (_dsh_attr_init) : Added function to initialize
+	pthread attr and set stacksize and detach state. 
+	
+	* src/pdsh/dsh.c (dsh) : Use _dsh_attr_init() instead of 
+	pthread_attr_init() directly. Set stacksize argument using
+	DSH_THREAD_STACKSIZE (Currently set to 128K).
+
 2004-06-01  Mark Grondona <mgrondona@llnl.gov>
 
 	* src/qsnet/qswutil.c (_qsw_cap_create) : Fix multirail loop for
